Mac: Cmd-Q now exits the application



App: Updated Electron engine to 35.7.0
      (Windows users should double-check firewall settings after installation)
App: Multiple GridTracker instance support using --gt-name=UniqueName
Logging: WSJT-X source renamed to "App Log(s)" .. all WSJT-X/JTDX log file locations searched at startup
      (Then disable the ones you don't want to load, this is for multiple GT instance support)
Logging: LoTW: Will now queue failed uploads and retry on next QSO
Logging: Any 1x1 QSO in the US over 15 days not considered worked for hunting purposes
Logging: MacOS no longer allows third-party apps to find installed apps, will use known install locations
        /Applications/TrustedQSL/tqsl.app
        /Applications/tqsl.app
        ~/Applications/TrustedQSL/tqsl.app
        ~/Applications/tqsl.app
        ~/Desktop/TrustedQSL/tqsl.app
        ~/Desktop/tqsl.app
        ~/Applications/Ham Radio/TrustedQSL/tqsl.app
        ~/Applications/Ham Radio/tqsl.app
Call Roster: Due to complaints 1x1 US Special Callsign highlighting removed
      (Use the watcher -> Callsign Regex  ^[KNW][0-9][A-W|Y|Z]$ to replicate)


App: 
  Fixed mouse stutter/system slowing issue:
    Removed the rarely used and expensive to maintain Off-Air Message Service (OAMS)


Map: Upgrade to OpenLayers map library 10.6.0
Map: Fixed animation toggle issue
Logging: LoTW: Use temp directory for LoTW queue file
Logging: Wavelog/Cloudlog: Fix for intermitten failure
Logging: ADIF field length for unicode strings corrected
Lookups: Fixed county bug on repeated cache hits


Map: Reverted to OpenLayers 10.1.0 due to issue on some Windows systems
App: Main window minimum height updated


Map: US Weather Radar restored after service removed by NOAA


App: Electron engine update to 35.7.5
Map: Updated OpenStreetMaps attribution URL
Logging: No longer add fields to ADIF record if unicode chars are present in data

### Fixed


### Removed


[unreleased]: 