@@ -146,7 +146,7 @@
                     </tr>
                   </table>
                 </div>
-                <div class="mapItem">
+                <!-- div class="mapItem">
                   <table align="center">
                     <tr align="center">
                       <td align="center">Contrast</td>
@@ -161,7 +161,7 @@
                       </td>
                     </tr>
                   </table>
-                </div>
+                </div-->
                 <div class="mapItem">
                   <table align="center">
                     <tr align="center">
@@ -178,7 +178,6 @@
                     </tr>
                   </table>
                 </div>
-                <br />
                 <div class="mapItem">
                   <table align="center">
                     <tr align="center">
@@ -195,6 +194,7 @@
                     </tr>
                   </table>
                 </div>
+                <br />
                 <div class="mapItem">
                   <table align="center">
                     <tr align="center">
@@ -233,7 +233,7 @@
               <td>
                 <div class="mapItem">
                   <div class="button" style="margin: 10px;padding:3px;" onclick="resetFilters()" title="Reset Filters">Reset Filters
-                    (Ctrl-R)</div>
+                    (Ctrl-L)</div>
                 </div>
               </td>
             </tr>
